# Compounding-Quality-RAG

./: .dockerignore  CONTEXT.md  LICENSE  README.md  RUNBOOK.md  pyproject.toml
app/: cli.py  (+9 more)
rag-engine-python/: .dockerignore  Dockerfile.rag-engine  README.md  pyproject.toml
rag-engine-python/app/: api_runner.py  checklist.py  cli.py  contextual_missing_information.py  evaluate.py  extract_intake_understanding.py  final_assessment.py  holdout_evaluate.py  llm_client.py  pipeline.py  rag_doc_models.py  refusal.py  reporting.py  retrieval.py  retrieval_ablation.py  retrieval_compare.py  retrieval_embedding.py  retrieval_evaluate.py  retrieval_hybrid.py  retrieval_intent.py  retrieval_query_strategy.py  review_contract.py  review_pipeline.py  review_summary_evaluate.py  review_summary_extraction.py  review_summary_policy.py  review_workflow.py  schemas.py  server.py
rag-engine-python/data/corpus/: SOP-001_Intake_Classification_and_Risk_Lane_Assignment.md  SOP-002_Frontline_Guidance_Delegate_Back_and_Response_Rules.md  SOP-004_Customer_Context_and_Administration_Review.md  SOP-005_API_Reference_BUD_and_Adverse_Event_Review.md  (+1 more)
rag-engine-python/docs/: retrieval_intent_detector_repair.md  retrieval_query_ablation_design.md
rag-engine-python/reports/: retrieval_comparison.md  retrieval_development.md  review_summary_extraction_development.md  review_summary_extraction_evaluation.md
rag-engine-python/tests/: test_adjudicated_case_fixtures.py  test_api_runner.py  test_api_runner_review_summary_extraction.py  test_checklist.py  test_checklist_relevance_regressions.py  test_cli.py  test_contextual_missing_information.py  test_contextual_missing_information_regressions.py  test_contextual_question_boundaries.py  test_corrected_development_labels.py  test_escalation_triggers.py  test_evaluate.py  test_expected_outputs_validate.py  test_extract_intake_understanding.py  test_helpers.py  test_holdout_evaluate.py  test_ingestion.py  test_llm_client.py  test_pipeline_baseline.py  test_reference_and_trigger_policy.py  test_refusal.py  test_reporting.py  test_retrieval.py  test_retrieval_ablation.py  test_retrieval_compare.py  test_retrieval_embedding.py  test_retrieval_embedding_compare.py  test_retrieval_evaluate.py  test_retrieval_hybrid.py  test_retrieval_intent.py  test_retrieval_intent_keyword_integration.py  test_retrieval_phase4_compare.py  test_retrieval_query_strategy.py  test_review_contract.py  test_review_pipeline.py  test_review_summary_evaluate.py  test_review_summary_extraction.py  test_review_summary_policy.py  test_review_workflow.py  test_server.py  (+2 more)
(+222 files in other folders)
