[project]
name="compounding-quality-rag"
version="0.1.0"
description="retrieval augmented generation prototype for compounding quality review workflows"
readme="README.md"
requires-python = ">=3.12"
dependencies= [
    "openai>=2.37.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["app"]

[tool.mypy]
python_version = "3.12"
mypy_path = "app"
