[project]
name="compounding-quality-rag"
version="0.1.0"
description="retrieval augmented generation prototype for compounding quality review workflows"
readme="README.md"
requires-python = ">=3.12"
dependencies= [
    "fastapi>=0.138.0",
    "mypy>=2.1.0",
    "openai>=2.37.0",
    "pydantic>=2.13.3",
    "pyright>=1.1.410",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.17",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["app"]

[tool.mypy]
python_version = "3.12"
mypy_path = "app"
